cmake_minimum_required(VERSION 3.17)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp main.cpp lib/TreeNode.cpp lib/TreeNode.h problem/94.h problem/102.h problem/103.h problem/96.h problem/95.h problem/95_2.h problem/98.h problem/98_2.h problem/99.h problem/99_2.h problem/99_3.h problem/100.h problem/101.h)