cmake_minimum_required(VERSION 3.17)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp main.cpp lib/TreeNode.cpp lib/TreeNode.h problem/94.h problem/102.h problem/103.h problem/96.h problem/95.h problem/95_2.h problem/98.h problem/98_2.h problem/99.h problem/99_2.h problem/99_3.h problem/100.h problem/101.h problem/101_2.h problem/104.h problem/105.h problem/106.h problem/107.h problem/108.h problem/110.h problem/111.h problem/112.h problem/113.h problem/114.h problem/116.h problem/117.h problem/124.h problem/129.h problem/144.h problem/145.h problem/173.h problem/199.h problem/199_2.h problem/222.h problem/226.h problem/230.h problem/230_2.h problem/235.h problem/236.h problem/257.h problem/297.h problem/449.h problem/404.h problem/450.h problem/501.h problem/508.h problem/513.h problem/513_2.h problem/515.h problem/530.h problem/538.h problem/543.h problem/563.h problem/572.h problem/606.h problem/617.h problem/623.h problem/637.h problem/652.h problem/652_2.h problem/653.h problem/654.h problem/655.h problem/662.h problem/669.h problem/671.h)